add element style

--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
     integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
     crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   <title>Document</title>
   <style>
     main {
       height: calc(100% - 127px);
+    }
+
+    .desplegable-nav.show {
+      translate: -20rem;
+      transition: all .6s linear;
+    }
+
+    .desplegable-nav {
+      translate: 20rem;
+      transition: all 1s linear;
+    }
+
+    .shadow {
+      text-shadow: 10px 10px #000;
     }
   </style>
 </head>
@@ -24,21 +40,24 @@
     <nav>
       <ul class="flex items-center gap-6">
         <a href="#">
-          <li class="font-semibold">HOME</li>
+          <li class="font-semibold hover:text-yellow-600">HOME</li>
         </a>
         <a href="#">
-          <li class="font-semibold">PRODUCT</li>
+          <li class="font-semibold hover:text-yellow-600">PRODUCT</li>
         </a>
         <a href="#">
-          <li class="font-semibold">STORE</li>
+          <li class="font-semibold hover:text-yellow-600">STORE</li>
         </a>
         <a href="#">
-          <li class="font-semibold">ABOUT US</li>
+          <li class="font-semibold hover:text-yellow-600">ABOUT US</li>
         </a>
       </ul>
     </nav>
+    <div class="desplegable-nav w-80 h-80 bg-slate-100 absolute right-0 top-16 translate-x-80 rounded-l-lg">
+
+    </div>
     <div>
-      <img class="w-5 cursor-pointer" src="./hamburguer.svg" alt="hamburguer">
+      <img class="w-5 cursor-pointer" src="./hamburguer.svg" alt="hamburguer" id="btn-hamburguer">
     </div>
   </header>
 
@@ -52,8 +71,8 @@
         totam veritatis ducimus illo, qui ut. Magnam deserunt delectus ipsam iure dolorum pariatur!</p>
       <p class="font-bold w-96 m-auto pt-3">Read More</p>
     </div>
-    <div class="flex justify-center items-end pb-10 sm:items-center text-sky-700">
-      <h1 class="font-black text-6xl sm:text-9xl">less is <br> more.</h1>
+    <div class="flex justify-center items-end pb-10 sm:items-center text-yellow-600">
+      <h1 class="font-black text-6xl sm:text-9xl shadow pl-18">less is <br> more.</h1>
     </div>
   </main>
 
@@ -68,6 +87,15 @@
       <p class="text-2xl">Huancayo-Perú</p>
     </div>
   </footer>
+
+  <script>
+    $(document).ready(function () {
+      $('#btn-hamburguer').click(function (e) {
+        e.preventDefault();
+        $('.desplegable-nav').toggleClass('show');
+      });
+    });
+  </script>
 </body>
 
 </html>
